update workflow permissions

--- a/.github/workflows/tweet-bot.yml
+++ b/.github/workflows/tweet-bot.yml
@@ -5,6 +5,9 @@ on:
     - cron: '32 12 * * *'  
   workflow_dispatch: 
 
+permissions:
+  contents: write
+
 jobs:
   tweet:
     runs-on: ubuntu-latest
